--- a/index.html
+++ b/index.html
@@ -81,65 +81,82 @@
             flex-direction: column;
             gap: 10px;
         }
-        .buttons a, .buttons button {
+        .buttons a {
             padding: 10px;
             background-color: #6c757d;
             color: #fff;
             text-decoration: none;
             border-radius: 5px;
-            border: none;
-            cursor: pointer;
+            transition: background-color 0.3s;
             display: flex;
             align-items: center;
             justify-content: center;
             gap: 20px;
         }
-        .buttons a i, .buttons button i {
+        .buttons a i {
             font-size: 1em;
         }
-        .buttons a:hover, .buttons button:hover {
+        .buttons a:hover {
             background-color: #5a6268;
         }
-        .pdf-modal {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.7);
+        .share-buttons {
+            margin: 20px 0;
+            display: flex;
             justify-content: center;
-            align-items: center;
-            z-index: 1000;
+            gap: 10px;
         }
-        .pdf-modal-content {
-            position: relative;
-            width: 80%;
-            height: 80%;
-            background-color: #fff;
-            border-radius: 10px;
-            overflow: hidden;
-        }
-        .pdf-modal-content iframe {
-            width: 100%;
-            height: 100%;
-        }
-        .pdf-modal-close {
-            position: absolute;
-            top: 10px;
-            right: 10px;
+        .share-buttons a {
+            padding: 10px;
             background-color: #6c757d;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 50%;
+            transition: background-color 0.3s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 20px;
+            width: 40px;
+            height: 40px;
+        }
+        .share-buttons a:hover {
+            background-color: #5a6268;
+        }
+        .contact-info {
+            margin: 20px 0;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
+            font-size: 1.1em;
+        }
+        .contact-info div {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+        .contact-info i {
+            color: #6c757d;
+        }
+        .back-to-top {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: rgba(108, 117, 125, 0.8);
             color: #fff;
             border: none;
             border-radius: 50%;
-            width: 30px;
-            height: 30px;
+            width: 50px;
+            height: 50px;
             display: flex;
             align-items: center;
             justify-content: center;
             cursor: pointer;
+            font-size: 20px;
+            display: none;
         }
-        .pdf-modal-close:hover {
+        .back-to-top:hover {
             background-color: #5a6268;
         }
         @media (max-width: 768px) {
@@ -174,25 +191,156 @@
             <img src="covers/غلاف الأسرة في الإسلام.jpeg" alt="غلاف الكتاب">
             <div class="book-title">الأسرة في الإسلام</div>
             <div class="buttons">
-                <button onclick="openPDF('books/الأسرة في الإسلام.pdf')"><i class="fas fa-eye"></i> عرض</button>
+                <a href="books/الأسرة في الإسلام.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
                 <a href="books/الأسرة في الإسلام.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
             </div>
         </div>
-        <!-- إضافة باقي الكتب هنا بنفس التنسيق -->
-    </div>
+        
+        <!-- الكتاب 2 -->
+        <div class="book">
+            <img src="covers/غلاف الطائفية في نظر الاسلام.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">الطائفية في نظر الاسلام</div>
+            <div class="buttons">
+                <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/الطائفية في نظر الاسلام.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
 
-    <!-- نافذة عرض PDF -->
-    <div class="pdf-modal" id="pdfModal">
-        <div class="pdf-modal-content">
-            <button class="pdf-modal-close" onclick="closePDF()">&times;</button>
-            <iframe id="pdfFrame" src="" frameborder="0"></iframe>
+        <!-- الكتاب 3 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول أوقات الصلاة.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث أوقات الصلاة</div>
+            <div class="buttons">
+                <a href="books/بحث أوقات الصلاة.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث أوقات الصلاة.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 4 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول التشويه الجسدي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول التشويه الجسدي</div>
+            <div class="buttons">
+                <a href="books/بحث حول التشويه الجسدي.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول التشويه الجسدي.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 5 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول التلقيح ا لصناعي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول التلقيح الصناعي</div>
+            <div class="buttons">
+                <a href="books/بحث حول التلقيح الصناعي.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول التلقيح الصناعي.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 6 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول الغناء.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول العناء</div>
+            <div class="buttons">
+                <a href="books/بحث حول العناء.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول العناء.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 7 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول القصة فقهياً.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول القصة فقهياً</div>
+            <div class="buttons">
+                <a href="books/بحث حول القصة فقهياً.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول القصة فقهياً.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 8 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول الكحول.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول الكحول</div>
+            <div class="buttons">
+                <a href="books/بحث حول الكحول.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول الكحول.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 9 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول خصائص النبي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول خصائص النبي</div>
+            <div class="buttons">
+                <a href="books/بحث حول خصائص النبي (ص).pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول خصائص النبي (ص).pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 10 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول قاعدة الإلزام.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول قاعدة الإلزام</div>
+            <div class="buttons">
+                <a href="books/بحث حول قاعدة الإلزام.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول قاعدة الإلزام.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 11 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول قراءة القرآن.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول قراءة القرآن الكريم</div>
+            <div class="buttons">
+                <a href="books/بحث حول قراءة القرآن الكريم.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/بحث حول قراءة القرآن الكريم.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 12 -->
+        <div class="book">
+            <img src="covers/غلاف فقه الأخلاق ج1.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">فقه الأخلاق (الجزء الأول)</div>
+            <div class="buttons">
+                <a href="books/فقه الأخلاق (الجزء الأول).pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/فقه الأخلاق (الجزء الأول).pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 13 -->
+        <div class="book">
+            <img src="covers/غلاف فقه الأخلاق ج2.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">فقه الأخلاق (الجزء الثاني)</div>
+            <div class="buttons">
+                <a href="books/فقه الأخلاق (الجزء الثاني).pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/فقه الأخلاق (الجزء الثاني).pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 14 -->
+        <div class="book">
+            <img src="covers/غلاف منة المنان.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">منة المنان في الدفاع عن القرآن</div>
+            <div class="buttons">
+                <a href="books/منة المنان في الدفاع عن القرآن.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/منة المنان في الدفاع عن القرآن.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 15 -->
+        <div class="book">
+            <img src="covers/غلاف نظرات إسلامية في اعلان حقوق الإنسان.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">نظرات إسلامية في اعلان حقوق الإنسان</div>
+            <div class="buttons">
+                <a href="books/نظرات إسلامية في اعلان حقوق الإنسان.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/نظرات إسلامية في اعلان حقوق الإنسان.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
+            </div>
         </div>
     </div>
 
     <!-- أزرار المشاركة في أسفل الصفحة -->
     <div class="share-buttons">
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://ayadhost.github.io/Download-books/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://twitter.com/intent/tweet?url=https://ayadhost.github.io/Download-books/" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://twitter.com/intent/tweet?url=https://ayadhost.github.io/Download-books/" target="_blank"><i class="fab fa-x-twitter"></i></a>
         <a href="https://wa.me/?text=اطلع على هذه الكتب: https://ayadhost.github.io/Download-books/" target="_blank"><i class="fab fa-whatsapp"></i></a>
         <a href="https://t.me/share/url?url=https://ayadhost.github.io/Download-books/&text=اطلع على هذه الكتب" target="_blank"><i class="fab fa-telegram-plane"></i></a>
         <a href="mailto:?subject=كتب مناهج التعليم العالي&body=اطلع على هذه الكتب من هنا: https://ayadhost.github.io/Download-books/" target="_blank"><i class="fas fa-envelope"></i></a>
@@ -211,16 +359,7 @@
     </button>
 
     <script>
-        function openPDF(url) {
-            document.getElementById('pdfFrame').src = url;
-            document.getElementById('pdfModal').style.display = 'flex';
-        }
-
-        function closePDF() {
-            document.getElementById('pdfFrame').src = '';
-            document.getElementById('pdfModal').style.display = 'none';
-        }
-
+        // إظهار زر العودة إلى الأعلى عند التمرير للأسفل
         window.onscroll = function() {
             const backToTopButton = document.querySelector('.back-to-top');
             if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
@@ -230,10 +369,15 @@
             }
         };
 
+        // دالة للتمرير إلى أعلى الصفحة
         function scrollToTop() {
-            window.scrollTo({ top: 0, behavior: 'smooth' });
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth'
+            });
         }
 
+        // إضافة تأثير ظهور الكتب عند التمرير
         document.addEventListener("DOMContentLoaded", function() {
             const books = document.querySelectorAll('.book');
             const observer = new IntersectionObserver((entries) => {
